[package]
name = "identicons_server"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]

[dependencies]
actix-web = "^0.6.13"
ctrlc = "^3.1.1"
identicons = { path = "../identicons" }
lazy_static = "^1.0.1"
listenfd = "0.3" # TODO make this optional
rand = "^0.5.1"
serde = "^1.0.66"
serde_derive = "^1.0.66"
serde_json = "^1.0.21"
tera = "^0.10.9"
