[package]
name = "identicons"
version = "0.2.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]

[dependencies]
lazy_static = "^1.0.1"
num = "^0.1.42"
rand = "^0.5.1"
serde = "^1.0.66"
serde_derive = "^1.0.66"
serde_json = "^1.0.21"
sha2 = "^0.7.1"
tera = "^0.10.9"

[dev-dependencies]
proptest = "^0.7.2"